spacing fixes

--- a/_sass/_skills.scss
+++ b/_sass/_skills.scss
@@ -2,8 +2,8 @@
   height: 100%;
   width: 100%;
   img {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
   }
 }
